ComponentInformation: add metadata translation support
- mavlink discussion: https://github.com/mavlink/mavlink/issues/1656
- adds a web download file cache use for http[s] metadata with 3 days
  caching (if the metadata does not set a crc)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,6 +84,8 @@ add_library(qgc
 	QGC.h
 	QGCApplication.cc
 	QGCApplication.h
+	QGCCachedFileDownload.cc
+	QGCCachedFileDownload.h
 	QGCComboBox.cc
 	QGCComboBox.h
 	QGCConfig.h
