Minimal flow to showcase the use of Disptacher

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,6 +152,8 @@ add_subdirectory(VehicleSetup)
 add_subdirectory(VideoManager)
 add_subdirectory(VideoReceiver)
 
+add_subdirectory(USSP)
+
 target_link_libraries(qgc
 	PRIVATE
 		shp
@@ -189,6 +191,8 @@ target_link_libraries(qgc
 		VehicleSetup
 		VideoManager
 		z # zlib
+
+		USSP
 )
 
 if(GST_FOUND)
