Populate service request url from product.json
Parse and populate flight_authorization and network_remote_id
service request URL from product.json dynamically.

Signed-off-by: Govind Singh <govind.sk85@gmail.com>

--- a/src/UTMSP/CMakeLists.txt
+++ b/src/UTMSP/CMakeLists.txt
@@ -2,6 +2,8 @@ find_package(Threads REQUIRED)
 
 add_library(UTMSP
         UTMSPLogger.h
+        UTMSPProductJson.h
+        UTMSPProductJson.cpp
         UTMSPRestInterface.h
         UTMSPRestInterface.cpp
         UTMSPBlenderRestInterface.h
