Update CMakeLists to support cmake build for UTMSP

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,13 @@ qt_add_library(qgc STATIC
 	QGCToolbox.h
 )
 
+#######################################################
+#             UTMSP FLAG
+#######################################################
+if(QGC_CONFIG_UTM_ADAPTER)
+    add_definitions(-DQGC_CONFIG_UTM_ADAPTER)
+endif()
+
 set_source_files_properties(QGCApplication.cc PROPERTIES COMPILE_DEFINITIONS APP_VERSION_STR="${APP_VERSION_STR}")
 
 add_subdirectory(ADSB)
