--- a/src/UTMSP/CMakeLists.txt
+++ b/src/UTMSP/CMakeLists.txt
@@ -1,41 +1,80 @@
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Threads REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system thread)
+find_package(OpenSSL REQUIRED)
 
 qt_add_library(UTMSP STATIC)
+option(QGC_CONFIG_UTM_ADAPTER "Enable UTM Adapter" OFF) # TODO: Make this QGC_CONFIG_UTM_ADAPTER
 
-option(CONFIG_UTM_ADAPTER "Enable UTM Adapter" OFF) # TODO: Make this QGC_CONFIG_UTM_ADAPTER
-if(CONFIG_UTM_ADAPTER)
-    message(STATUS "UTMSP is Initialized")
-    target_sources(UTMSP
-        PRIVATE
-            UTMSPAircraft.cpp
-            UTMSPAircraft.h
-            UTMSPAuthorization.cpp
-            UTMSPAuthorization.h
-            UTMSPBlenderRestInterface.cpp
-            UTMSPBlenderRestInterface.h
-            UTMSPFlightPlanManager.cpp
-            UTMSPFlightPlanManager.h
-            UTMSPManager.cpp
-            UTMSPManager.h
-            UTMSPNetworkRemoteIDManager.cpp
-            UTMSPNetworkRemoteIDManager.h
-            UTMSPOperator.cpp
-            UTMSPOperator.h
-            UTMSPRestInterface.cpp
+    if(QGC_CONFIG_UTM_ADAPTER)
+        add_definitions(-DQGC_CONFIG_UTM_ADAPTER)
+        add_definitions(-DQT_DEBUG)
+
+        set(CMAKE_BUILD_TYPE Debug)
+        # set(QGC_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../)
+        # set(NLOHMANN_JSON_SOURCE_DIR "${QGC_ROOT_DIR}/libs/libevents/libevents/libs/cpp/parse/nlohmann_json")
+        # set(NLOHMANN_JSON_BINARY_DIR "${CMAKE_BINARY_DIR}/nlohmann_json")
+
+        # add_subdirectory(${NLOHMANN_JSON_SOURCE_DIR} ${NLOHMANN_JSON_BINARY_DIR})
+        message(STATUS "UTMSP is Initialized")
+
+        target_sources(UTMSP
+            PRIVATE
             UTMSPRestInterface.h
-            UTMSPServiceController.cpp
+            UTMSPBlenderRestInterface.h
+            UTMSPAuthorization.h
+            UTMSPNetworkRemoteIDManager.h
+            UTMSPAircraft.h
+            UTMSPOperator.h
+            UTMSPFlightPlanManager.h
             UTMSPServiceController.h
-            UTMSPVehicle.cpp
             UTMSPVehicle.h
-    )
+            UTMSPManager.h
+            UTMSPFlightDetails.h
+            UTMSPRestInterface.cpp
+            UTMSPBlenderRestInterface.cpp
+            UTMSPAuthorization.cpp
+            UTMSPNetworkRemoteIDManager.cpp
+            UTMSPAircraft.cpp
+            UTMSPOperator.cpp
+            UTMSPFlightPlanManager.cpp
+            UTMSPServiceController.cpp
+            UTMSPVehicle.cpp
+            UTMSPManager.cpp
+            UTMSPFlightDetails.cpp
+        )
 
     add_custom_target(UTMSPQml
         SOURCES
-            UTMSPActivationStatusBar.qml
-            UTMSPAdapterEditor.qml
-            UTMSPMapVisuals.qml
+        UTMSPAdapterEditor.qml
+        UTMSPMapVisuals.qml
+        UTMSPActivationStatusBar.qml
+        UTMSPStateStorage.qml
     )
+
+    target_include_directories(UTMSP
+        PUBLIC
+        services
+        # ${QGC_ROOT_DIR}/libs/libevents/libevents/libs/cpp/parse/nlohmann_json/include
+    )
+
+    target_link_libraries(UTMSP
+
+        PRIVATE
+        libevents_parser
+        PUBLIC
+        Boost::system
+        Boost::thread
+        OpenSSL::SSL
+        OpenSSL::Crypto
+        nlohmann_json::nlohmann_json
+        Qt6::Core
+        Qt6::Location
+        Qt6::Widgets
+        Threads::Threads
+        qgc
+    )
+
 else()
     message(STATUS "UTMSP: Dummy is Initialized")
 
@@ -47,21 +86,19 @@ else()
         PRIVATE
             ${UTMSP_RESOURCES}
     )
-endif()
 
-target_link_libraries(UTMSP
-    PRIVATE
-        nlohmann_json
-    PUBLIC
+    target_link_libraries(UTMSP
+
+        PRIVATE
+        libevents_parser
+        PUBLIC
         Qt6::Core
         Qt6::Location
         Qt6::Widgets
         Threads::Threads
         qgc
-)
+    )
 
-target_include_directories(UTMSP
-    PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        services
-)
+endif()
+
+target_include_directories(UTMSP INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
