--- a/src/MissionManager/CMakeLists.txt
+++ b/src/MissionManager/CMakeLists.txt
@@ -1,5 +1,9 @@
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Positioning Qml Xml)
 
+if(QGC_CONFIG_UTM_ADAPTER)
+    add_definitions(-DQGC_CONFIG_UTM_ADAPTER)
+endif()
+
 qt_add_library(MissionManager STATIC
 	BlankPlanCreator.cc
 	BlankPlanCreator.h
