Update CMakeLists to support UTMSP Lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,13 @@ if (MOBILE)
 endif ()
 
 #######################################################
+#             UTMSP FLAG
+#######################################################
+if(CONFIG_UTM_ADAPTER)
+    add_definitions(-DCONFIG_UTM_ADAPTER)
+endif()
+
+#######################################################
 #             Test Setup
 #######################################################
 if (BUILD_TESTING)
