--- a/src/QmlControls/CMakeLists.txt
+++ b/src/QmlControls/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(CONFIG_UTM_ADAPTER)
+    add_definitions(-DCONFIG_UTM_ADAPTER)
+endif()
+
 add_library(QmlControls
 	AppMessages.cc
 	AppMessages.h
